docker-compose 构建缓存 取消插件端配置化向服务端注册功能 取消服务端授权 token 配置